--- a/style.css
+++ b/style.css
@@ -1,6 +1,90 @@
-.flex-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+body{
+    background-color: rgb(135, 133, 133);
+    overflow: hidden;
+    
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    
+    flex: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.title{
+    display:block;
+    text-align: center;
+    color: black;
+    font-size: x-large;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.restart{
+    display: none;
+}
+
+
+.ties{
+    text-align: center;
+}
+
+.winnerDiv{
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.playerSelection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+
+    
+}
+
+.computerSelection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    
+}
+
+.options{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.opt{
+    background-color: black;
+    color: white;
+    padding: 50px;
+    border-radius: 20px;
+    border: none;
+    font-size: 20px;
+}
+
+.playerScore, .computerScore{
+    font-size: 40px;
+    font-weight: bold;
+    
+}
+
+.restart{
+    background-color: black;
+    color: white;
+    padding: 25px;
+    border-radius: 20px;
+    border: none;
+    font-size: 20px;
+}
+
+.playerChoice, .computerChoice{
+    color: white;
+}
+
